--- a/package.json
+++ b/package.json
@@ -1,20 +1,56 @@
 {
-  "name": "telegram-notify-bot-serverless",
-  "version": "1.0.0",
-  "description": "",
+  "name": "telegram-bot",
+  "version": "0.1.0",
+  "description": "With this bot you won't skip the moment when your favorite movies are available on the torrents!",
+  "author": "Dmitrii Baranov",
   "main": "handler.js",
   "scripts": {
-    "test": "jest --env=node ./test"
+    "start": "npm run serve",
+    "serve-qa": "NODE_ENV=qa node dist/index.js",
+    "watch-node": "nodemon dist/index.js",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "serve-debug": "nodemon --inspect dist/index.js",
+    "start:prod": "node dist/index.js",
+    "start:dev": "NODE_ENV=development nodemon src/index.ts",
+    "start:debug": "NODE_ENV=debug nodemon --inspect-rbk src/index.ts",
+    "build": "npm run build-ts && npm run tslint",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "debug": "npm run build && npm run watch-debug",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "telegraf": "^3.38.0"
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.2",
+    "cloudscraper": "^1.5.0",
+    "dotenv": "^6.1.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.12",
+    "node-cron": "^2.0.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
+    "string-similarity": "^3.0.0",
+    "telegraf": "^3.25.0",
+    "telegraf-i18n": "^6.4.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "jest": "^26.0.1",
-    "serverless-offline": "^6.4.0",
-    "telegram-test-api": "^2.4.2"
+    "@types/cheerio": "^0.22.10",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.17.9",
+    "@types/lodash": "^4.14.119",
+    "@types/node": "^10.12.7",
+    "@types/node-cron": "^2.0.3",
+    "@types/request-promise": "^4.1.42",
+    "@types/string-similarity": "^3.0.0",
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.6",
+    "serverless-dotenv-plugin": "^3.1.0",
+    "serverless-offline": "^6.8.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6"
   }
 }
