--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "npm run serve",
-    "serve": "node dist/index.js",
+    "serve": "npm run build-ts && npm run start:prod",
     "serve-qa": "NODE_ENV=qa node dist/index.js",
     "watch-node": "nodemon dist/index.js",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "serve-debug": "nodemon --inspect dist/index.js",
-    "start:prod": "NODE_ENV=production node dist/index.js",
+    "start:prod": "node dist/index.js",
     "start:dev": "NODE_ENV=development nodemon src/index.ts",
     "start:debug": "NODE_ENV=debug nodemon --inspect-rbk src/index.ts",
     "build": "npm run build-ts && npm run tslint",
