--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
     "cloudscraper": "^1.5.0",
     "dotenv": "^6.1.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "express-openid-connect": "^2.3.0",
+    "i18next": "^20.1.0",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-fs-backend": "^1.1.1",
+    "jwks-rsa": "^2.0.2",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.12",
     "node-cron": "^2.0.3",
@@ -40,6 +47,7 @@
     "@types/cheerio": "^0.22.10",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.17.9",
+    "@types/i18next-fs-backend": "^1.0.0",
     "@types/lodash": "^4.14.166",
     "@types/node": "^10.12.7",
     "@types/node-cron": "^2.0.3",
