--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
     "string-similarity": "^3.0.0",
     "telegraf": "^3.25.0",
     "telegraf-i18n": "^6.4.0",
-    "winston": "^3.1.0",
-    "@types/i18next-fs-backend": "^1.0.0",
-    "@types/lodash": "^4.14.166",
-    "@types/node-cron": "^2.0.3",
-    "@types/string-similarity": "^3.0.0"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.10",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.17.9",
+    "@types/i18next-fs-backend": "^1.0.0",
+    "@types/lodash": "^4.14.166",
     "@types/node": "^10.12.7",
+    "@types/node-cron": "^2.0.3",
+    "@types/string-similarity": "^3.0.0",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.6",
     "serverless-dotenv-plugin": "^3.1.0",
