--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -2,7 +2,7 @@ name: QA BOT API env (bot.qa.imsha.by)
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ develop, fb-telegraf-infra]
 jobs:
   build:
 
@@ -33,8 +33,8 @@ jobs:
       run: ls -la
     - name: Update on server
       run: |
+        rsync -avz -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" / 61007-1897@${{ secrets.SSH_HOST }}:~/temp
         ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -t 61007-1897@${{ secrets.SSH_HOST }} "cd ~/ROOT && git pull && npm ci"
-        rsync -avz -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" /dist 61007-1897@${{ secrets.SSH_HOST }}:~/temp
 
 
 
