--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -33,7 +33,7 @@ jobs:
       run: ls -la
     - name: Update on server
       run: |
-        rsync -avz -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" / 61007-1897@${{ secrets.SSH_HOST }}:~/temp
+        rsync -avz -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" dist 61007-1897@${{ secrets.SSH_HOST }}:~/temp
         ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -t 61007-1897@${{ secrets.SSH_HOST }} "cd ~/ROOT && git pull && npm ci"
 
 
