--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -31,7 +31,7 @@ jobs:
     - run: npm run build
     - name: List files
       run: ls -la
-    - name: Update on server
+    - name: Copy & Update on server
       run: |
         rsync -avz -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" dist 61007-1897@${{ secrets.SSH_HOST }}:~/temp
         ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -t 61007-1897@${{ secrets.SSH_HOST }} "cd ~/ROOT && git pull && npm ci"
