--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -10,7 +10,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      TARGET: prd
+      TARGET: production
     strategy:
       matrix:
         node-version: [14.x]
@@ -23,3 +23,31 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -t rsa github.com
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+        registry-url: 'https://npm.pkg.github.com'
+    - run: npm ci
+    - run: npm run build
+    - name: List files
+      run: ls -la
+    - name: Copy to server
+      run: |
+        rsync -avz -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" dist 63832-1897@${{ secrets.SSH_HOST }}:~/temp
+    - name: Re-install node_modules & re-start server
+      run: |
+        ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -t 61007-1897@${{ secrets.SSH_HOST }} "cd ~/ROOT && git pull && npm ci && rm -rf dist && mv ~/temp/dist ~/ROOT/ && pm2 restart dist/index.js --time"
+
+
+    # - run: npm run build
+
+#    - run: npm publish -- for creation package
+
+
+    # - name: List files
+    #   run: ls -la
+    # - name: Copy to server
+    #   run: rsync -avz --delete-before -e "ssh -p 3022 -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" dist/ 58336-1897@${{ secrets.SSH_HOST }}:~/ROOT
+
