--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next": "^20.1.0",
     "i18next-express-middleware": "^2.0.0",
     "i18next-fs-backend": "^1.1.1",
+    "ioredis": "^4.28.5",
     "jwks-rsa": "^2.0.2",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.12",
@@ -41,7 +42,6 @@
     "string-similarity": "^3.0.0",
     "telegraf": "^3.25.0",
     "telegraf-i18n": "^6.4.0",
-    "telegraf-session-redis": "^5.1.0",
     "winston": "^3.1.0"
   },
   "devDependencies": {
@@ -49,6 +49,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.17.9",
     "@types/i18next-fs-backend": "^1.0.0",
+    "@types/ioredis": "^4.28.10",
     "@types/lodash": "^4.14.166",
     "@types/node": "^10.12.7",
     "@types/node-cron": "^2.0.3",
