--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "start:prod": "node dist/index.js",
     "start:dev": "NODE_ENV=development nodemon src/index.ts",
     "start:debug": "NODE_ENV=debug nodemon --inspect-rbk src/index.ts",
-    "build": "npm run build-ts && npm run tslint",
+    "build": "npm run version-ts && npm run build-ts && npm run tslint",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
+    "version-ts": "tsc -v",
     "debug": "npm run build && npm run watch-debug",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"npm run watch-ts\" \"npm run watch-node\"",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
