--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -16,13 +16,14 @@ jobs:
       NEXT_PUBLIC_STRAPI_TOKEN: ${{ secrets.NEXT_PUBLIC_STRAPI_TOKEN }}
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    strategy:
-      matrix:
-        node-version: [15.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Use NodeJS v.14.19.1
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.19.1
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
