--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "telegram-bot",
-  "version": "0.1.0",
-  "description": "With this bot you won't skip the moment when your favorite movies are available on the torrents!",
-  "author": "Andrei Misan",
+  "version": "0.2.0",
+  "description": "Help volunteers to manage there parish",
   "main": "dist/index.js",
+  "repository": "git@github.com:ImshaBy/imshaby-bot.git",
+  "author": "Andrei Misan",
+  "license": "MIT",
   "scripts": {
     "start": "npm run serve",
     "serve": "npm run build-ts && npm run start:prod",
     "serve-qa": "NODE_ENV=qa node dist/index.js",
     "watch-node": "nodemon dist/index.js",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "eslint": "eslint -c .eslintrc.json .",
     "serve-debug": "nodemon --inspect dist/index.js",
     "start:prod": "node dist/index.js",
     "start:dev": "NODE_ENV=development nodemon src/index.ts",
     "start:debug": "NODE_ENV=debug nodemon --inspect-rbk src/index.ts",
-    "build": "node -v && npm run version-ts && npm run build-ts && npm run tslint",
+    "build": "npm run build-ts && npm run eslint",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
     "version-ts": "tsc -v",
@@ -23,44 +25,38 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.2",
-    "cloudscraper": "^1.5.0",
-    "dotenv": "^6.1.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
+    "@types/lodash": "^4.14.191",
+    "axios": "^1.2.4",
+    "dotenv": "^16.0.3",
+    "express": "4.0.0",
+    "express-jwt": "^8.3.0",
     "express-jwt-authz": "^2.4.1",
-    "express-openid-connect": "^2.3.0",
-    "i18next": "^20.1.0",
-    "i18next-express-middleware": "^2.0.0",
-    "i18next-fs-backend": "^1.1.1",
-    "ioredis": "^4.28.5",
-    "jwks-rsa": "^2.0.2",
-    "lodash": "^4.17.11",
-    "mongoose": "^5.3.12",
-    "node-cron": "^2.0.3",
-    "request": "^2.88.0",
-    "string-similarity": "^3.0.0",
-    "telegraf": "^3.25.0",
-    "telegraf-i18n": "^6.4.0",
-    "winston": "^3.1.0"
+    "i18next": "^22.4.9",
+    "i18next-fs-backend": "^2.1.1",
+    "i18next-http-middleware": "^3.2.2",
+    "ioredis": "^5.3.0",
+    "jwks-rsa": "^3.0.1",
+    "mongoose": "^6.9.0",
+    "node-cron": "^3.0.2",
+    "string-similarity": "^4.0.4",
+    "telegraf": "^3.7.1",
+    "telegraf-i18n": "^6.6.0",
+    "typescript": "^4.9.4",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.10",
-    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.17.9",
-    "@types/i18next-fs-backend": "^1.0.0",
-    "@types/ioredis": "^4.28.10",
-    "@types/lodash": "^4.14.166",
-    "@types/node": "^10.12.7",
-    "@types/node-cron": "^2.0.3",
-    "@types/string-similarity": "^3.0.0",
-    "concurrently": "^4.0.1",
-    "nodemon": "^1.18.6",
-    "serverless-dotenv-plugin": "^3.1.0",
-    "serverless-offline": "^6.8.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.7",
+    "@types/string-similarity": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-jsdoc": "^39.6.8",
+    "eslint-plugin-no-null": "^1.0.2"
+  },
+  "engines": {
+    "npm": ">=6.0.0 <8.0.0",
+    "node": ">=14.0.0 <16.0.0"
   }
 }
