--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "baseUrl": ".",
     "resolveJsonModule": true,
     "lib": ["es2017"],
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
