--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -57,12 +57,12 @@ jobs:
               HostkeyAlgorithms +ssh-rsa
               PubkeyAcceptedAlgorithms +ssh-rsa
 
-      - name: Deploy with rsync
-        run: rsync -avz  --rsh='ssh -o StrictHostKeyChecking=no -i ~/.ssh/git-to-jelastic -p3022' --delete-before dist/ 63835-1897@gate.mycloud.by:~/temp
+    #  - name: Deploy with rsync
+    #   run: rsync -avz  --rsh='ssh -o StrictHostKeyChecking=no -i ~/.ssh/git-to-jelastic -p3022' --delete-before dist/ 63835-1897@gate.mycloud.by:~/temp
 
       - name: Re-install node_modules & re-start server
         run: |
-          ssh -p 3022 -i ~/.ssh/git-to-jelastic -o StrictHostKeyChecking=no -t 63835-1897@gate.mycloud.by "cd ~/ROOT && git pull && yarn install && rm -rf dist && mv ~/temp/dist ~/ROOT/ && pm2 restart dist/index.js --time"
+          ssh -p 3022 -i ~/.ssh/git-to-jelastic -o StrictHostKeyChecking=no -t 63835-1897@gate.mycloud.by "cd ~/ROOT && git pull && yarn install && yarn build && pm2 start dist/index.js --time"
 
 
     # - run: npm run build
