--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/lodash": "^4.14.191",
     "axios": "^1.2.4",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "4.0.0",
     "express-jwt": "^8.3.0",
