--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "mongoose": "^6.9.0",
     "node-cron": "^3.0.2",
     "string-similarity": "^4.0.4",
-    "telegraf": "^3.7.1",
+    "telegraf": "3.38.0",
     "telegraf-i18n": "^6.6.0",
     "typescript": "^4.9.4",
     "winston": "^3.8.2"
