--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "eslint -c .eslintrc.json .",
     "serve-debug": "nodemon --inspect dist/index.js",
     "start:prod": "node dist/index.js",
-    "start:dev": "NODE_ENV=development nodemon src/index.ts",
+    "start:dev": "nodesrc/index.ts",
     "start:debug": "NODE_ENV=debug nodemon --inspect-rbk src/index.ts",
     "build": "npm run build-ts && npm run eslint",
     "build-ts": "tsc",
@@ -39,9 +39,11 @@
     "jwks-rsa": "^3.0.1",
     "mongoose": "^6.9.0",
     "node-cron": "^3.0.2",
+    "nodemon": "^2.0.22",
     "string-similarity": "^4.0.4",
     "telegraf": "3.38.0",
     "telegraf-i18n": "^6.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "winston": "^3.8.2"
   },
