--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,25 @@ dist/**/*
 debug.log
 dump
 dist.zip
+
+
+# Local .terraform directories
+.terraform
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars.json
+tf_*
+
+# Ignore CLI configuration files
+#.terraformrc
+# terraform.rc
+.hypothesis
+.terraform.lock.hcl
+key-terraform.json
