--- a/.github/workflows/deploy-yc-prod.yml
+++ b/.github/workflows/deploy-yc-prod.yml
@@ -6,8 +6,8 @@ on:
       - v*
 jobs:
   build:
-    enviroment: production
     runs-on: ubuntu-latest
+    environment: production
     env:
       TARGET: production
 
