--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "eslint-plugin-no-null": "^1.0.2"
   },
   "engines": {
-    "npm": ">=6.0.0 <8.0.0",
-    "node": ">=14.0.0 <16.0.0"
+    "node": "^16.20.0"
   }
 }
