--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "telegraf": "3.38.0",
     "telegraf-i18n": "^6.6.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "4.9.4",
     "winston": "^3.8.2",
     "@types/express": "^4.17.9",
     "@types/node": "^18.11.18",
