--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,21 +1,19 @@
 FROM node:16.20.0 as build
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
-WORKDIR /opt/
-COPY ./package.json ./yarn.lock ./
-ENV PATH /opt/node_modules/.bin:$PATH
-RUN yarn config set network-timeout 600000 -g && yarn install
 WORKDIR /opt/app
+COPY ./package.json ./yarn.lock ./
+ENV PATH /opt/app/node_modules/.bin:$PATH
+RUN yarn config set network-timeout 600000 -g && yarn install
 COPY ./ .
 RUN yarn build
 
 FROM node:16.20.0
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
-WORKDIR /opt/
-COPY --from=build /opt/node_modules ./node_modules
-ENV PATH /opt/node_modules/.bin:$PATH
 WORKDIR /opt/app
+COPY --from=build /opt/app/node_modules ./node_modules
+ENV PATH /opt/app/node_modules/.bin:$PATH
 COPY --from=build /opt/app ./
 EXPOSE 8080
 CMD ["yarn", "start:prod"]
