--- a/package.json
+++ b/package.json
@@ -25,36 +25,42 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve-debug\""
   },
   "dependencies": {
+    "@telegraf/session": "^2.0.0-beta.7",
+    "dotenv": "16.3.1",
+    "eslint-plugin-prettier": "5.0.0",
+    "redis": "^4.6.13",
+    "telegraf": "4.14.0",
+    "winston": "3.10.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.7",
+    "@types/string-similarity": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "axios": "^1.2.4",
     "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
+    "concurrently": "^8.2.1",
+    "eslint": "^8.32.0",
+    "eslint-plugin-jsdoc": "^39.6.8",
+    "eslint-plugin-no-null": "^1.0.2",
     "express": "4.0.0",
     "express-jwt": "^8.3.0",
     "express-jwt-authz": "^2.4.1",
     "i18next": "^22.4.9",
     "i18next-fs-backend": "^2.1.1",
     "i18next-http-middleware": "^3.2.2",
-    "ioredis": "^5.3.0",
     "jwks-rsa": "^3.0.1",
     "mongoose": "^6.9.0",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "string-similarity": "^4.0.4",
-    "telegraf": "3.38.0",
     "telegraf-i18n": "^6.6.0",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.4",
-    "winston": "^3.8.2",
-    "@types/express": "^4.17.9",
-    "@types/node": "^18.11.18",
-    "@types/node-cron": "^3.0.7",
-    "@types/string-similarity": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.32.0",
-    "eslint-plugin-jsdoc": "^39.6.8",
-    "eslint-plugin-no-null": "^1.0.2"
+    "typescript": "5.2.2",
+    "yarn": "^1.22.19"
   },
   "engines": {
     "node": "^16.20.0"
