--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:prod": "node dist/index.js",
     "start:dev": "nodesrc/index.ts",
     "start:debug": "NODE_ENV=debug nodemon --inspect-rbk src/index.ts",
-    "build": "yarn tsc && yarn eslint",
+    "build": "yarn tsc",
     "debug": "yarn build && yarn watch-debug",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\"  \"yarn tsc -w\" \"yarn watch-node\"",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn tsc -w\" \"yarn serve-debug\""
@@ -27,16 +27,8 @@
     "eslint-plugin-prettier": "5.0.0",
     "redis": "^4.6.13",
     "telegraf": "4.14.0",
-    "winston": "3.10.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.18",
-    "@types/node-cron": "^3.0.7",
-    "@types/string-similarity": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "winston": "3.10.0",
+    "telegraf-i18n": "^6.6.0",
     "axios": "^1.2.4",
     "body-parser": "^1.20.1",
     "concurrently": "^8.2.1",
@@ -54,10 +46,16 @@
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "string-similarity": "^4.0.4",
-    "telegraf-i18n": "^6.6.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "@types/express": "^4.17.9",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
+    "@types/node-cron": "^3.0.7",
+    "@types/string-similarity": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0"
   },
   "engines": {
     "node": "^16.20.0"
