--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "i18next-fs-backend": "^2.1.1",
     "i18next-http-middleware": "^3.2.2",
     "jwks-rsa": "^3.0.1",
+    "moment": "^2.30.1",
     "mongoose": "^6.9.0",
     "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
@@ -58,6 +59,6 @@
     "@typescript-eslint/parser": "^5.49.0"
   },
   "engines": {
-    "node": "^16.20.0"
+    "node": "^18.19.0"
   }
 }
