--- a/.github/workflows/deploy-yc-prod.yml
+++ b/.github/workflows/deploy-yc-prod.yml
@@ -1,9 +1,7 @@
 name: PROD env (Yandex Cloud)
 on:
-  push:
-    branches: [ master]
-    tags:
-      - v*
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +11,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref_name }}
 
       # Runs a single command using the runners shell
       - name: Yandex Cloud CR "Login" Action for GitHub Actions
@@ -30,3 +30,33 @@ jobs:
         run: |
           docker build -f ./Dockerfile.prod -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG .
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
+  
+  create_release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Export LATEST_TAG
+        run: |
+          echo "LATEST_TAG=$(curl -qsSL \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "${{ github.api_url }}/repos/${{ github.repository }}/releases/latest" \
+          | jq -r .tag_name)" >> $GITHUB_ENV
+      - name: Update CHANGELOG
+        id: changelog
+        uses: requarks/changelog-action@v1
+        with:
+          token: ${{ github.token }}
+          fromTag: ${{ github.ref_name }}
+          toTag: ${{ env.LATEST_TAG }}
+          writeToFile: false
+          reverseOrder: true
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          body: ${{ steps.changelog.outputs.changes }}
+          makeLatest: true
+          token: ${{ secrets.GITHUB_TOKEN }}
