feat: integrate Sentry for error tracking and profiling
- Added Sentry configuration in a new file `src/isntrument.ts`.
- Updated `express.ts` to include Sentry error handling.
- Modified `package.json` to include Sentry CLI and profiling dependencies.
- Updated `.gitignore` to exclude Sentry configuration file.
- Enhanced TypeScript configuration for better source mapping with Sentry.
- Updated deployment workflow to include Sentry authentication token.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,17 @@
     "resolveJsonModule": true,
     "lib": ["es2017"],
     "forceConsistentCasingInFileNames": true,
+
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
-    }
+    },
+
+    "inlineSources": true,
+
+    // Set `sourceRoot` to  "/" to strip the build path prefix
+    // from generated source code references.
+    // This improves issue grouping in Sentry.
+    "sourceRoot": "/"
   },
   "include": ["src/**/*", "src/locales/*.json", "handler.js"]
 }
