--- a/.github/workflows/deploy-yc-prod.yml
+++ b/.github/workflows/deploy-yc-prod.yml
@@ -27,6 +27,7 @@ jobs:
           CR_REGISTRY: ${{secrets.CR_REGISTRY}}
           CR_REPOSITORY: ${{vars.CR_REPOSITORY}}
           IMAGE_TAG: ${{ github.sha }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: |
           docker build -f ./Dockerfile.prod -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG .
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
