--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,7 @@
 FROM node:18.19.0 as build
 ARG NODE_ENV=production
+ARG SENTRY_AUTH_TOKEN
+ENV SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
 ENV NODE_ENV=${NODE_ENV}
 WORKDIR /opt/app
 COPY ./package.json ./yarn.lock ./
