feat: update Dockerfile for production build and add build:qa script
- Changed base image to Node 18.19.0 and updated NODE_ENV to production.
- Introduced multi-stage build in Dockerfile for optimized production image.
- Added build:qa script in package.json for QA builds.
- Updated GitHub Actions workflow to use the new Dockerfile.

--- a/.github/workflows/release-qa.yml
+++ b/.github/workflows/release-qa.yml
@@ -41,7 +41,7 @@ jobs:
           CR_REPOSITORY: imshaby-bot-qa
           IMAGE_TAG: ${{ needs.create_tag.outputs.tag }}
         run: |
-          docker build -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -f ./Dockerfile.prod .
+          docker build -t cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG -f ./Dockerfile .
           docker push cr.yandex/$CR_REGISTRY/$CR_REPOSITORY:$IMAGE_TAG
   
   deploy_qa:
