--- a/compose.yml
+++ b/compose.yml
@@ -1,26 +1,26 @@
 services:
   app:
-    container_name: nodeapp
+    container_name: app
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        NODE_ENV: ${NODE_ENV}
+        NODE_ENV: ${NODE_ENV:-dev}
         SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
     ports:
-      - "33380:80"
+      - "33380:18080"
     environment:
-      NODE_ENV: ${NODE_ENV}
+      NODE_ENV: ${NODE_ENV:-dev}
       SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
       DATABASE_URI: ${DATABASE_URI}
-      REDIS_HOST: ${REDIS_HOST}
-      REDIS_PORT: ${REDIS_PORT}
-    restart: unless-stopped
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     volumes:
       - .:/opt/app
     depends_on:
       - mongo
       - redis
+    restart: unless-stopped
 
   mongo:
     image: mongo:6.0
@@ -32,7 +32,7 @@ services:
     restart: unless-stopped
 
   redis:
-    image: redis:7.2
+    image: redis:7
     container_name: redis
     ports:
       - "33379:6379"
